mobile device alignment fix

--- a/src/containers/about/about.css
+++ b/src/containers/about/about.css
@@ -1,7 +1,7 @@
 .about {
   display: flex;
   flex-direction: column;
-  padding: 8rem 6rem;
+  padding: 4rem 2rem;
 }
 
 .about p {
@@ -81,4 +81,18 @@
 
 
 @media screen and (max-width: 500px) {
+  .about p {
+    font-size: 24px;
+}
+.about-profile p {
+  max-width: 1000px;
+  font-family: var(--font-primary);
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 22px;
+  color: var(--color-light);
+}
+.about-education img:first-child {
+  width: 23rem;
+}
 }
