--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -172,10 +172,15 @@
   }
   .header h1 {
     font-size: 38px;
+    padding-top: 40px;
+    line-height: 38px;
   }
   .header h2 {
     padding-top: 0;
-    font-size: 24px;
+    line-height: 24px;
+    padding-top: 8px;
+    padding-bottom: 24px;
+    font-size: 20px;
   }
   .header-content{
     align-items: center;
